# stream-mp4-audio

./: CLAUDE.md  OVERVIEW.md  README.md  REPORT.md  pyproject.toml
src/stream_mp4_audio/: __init__.py  mp4_audio_file.py
tests/: test_mp4_audio_file.py
