[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-mp4-audio"
version = "0.1.0"
description = "Lazily stream decoded PCM samples out of the audio track of .mp4 files, soundfile.SoundFile-alike."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "av",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]
